# AI-Scientist

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: launch_polisher.py  main.py
src/ai_scientist/: perform_review.py  perform_writeup.py
src/paper_smith/: llm.py  perform_review.py  perform_writeup.py
src/utils/: utils.py
templates/manuscript/: ideas.json  prompt.json  seed_ideas.json
templates/manuscript/latex/: template.tex
templates/manuscript/sources/: source_latex.tex  source_reference.bib
